--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-WHCJD39');</script>
 <!-- End Google Tag Manager -->
- <title>The Chocolate Shop
+    	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>  
+      <link rel="stylesheet" type="text/css" href="style.css" />
+
+    <title>The Chocolate Shop
     var focusTitle = $('head title').text(); // Originalen Title speichern
 var tab = 0;
 $(window).on('blur focus', function(e) {
@@ -34,10 +37,8 @@ $(window).on('blur focus', function(e) {
  $(this).data('prevType', e.type);
 });
     </title>
+
     
-    
-    <link rel="stylesheet" type="text/css" href="style.css" />
-   <script src="https://ajax.googleapis.com/ajax/libs/cesiumjs/1.78/Build/Cesium/Cesium.js"></script>
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
