--- a/index.html
+++ b/index.html
@@ -8,43 +8,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-WHCJD39');</script>
 <!-- End Google Tag Manager -->
-    	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>  
+    <title>The Chocolate Shop</title>
+  
       <link rel="stylesheet" type="text/css" href="style.css" />
-
-   $(function() {
-
-var origTitle, animatedTitle, timer;
-
-function animateTitle(newTitle) {
-  var currentState = false;
-  origTitle = document.title;  // save original title
-  animatedTitle = "Hey There! " + origTitle;
-  timer = setInterval(startAnimation, 2000);
-
-  function startAnimation() {
-    // animate between the original and the new title
-    document.title = currentState ? origTitle : animatedTitle;
-    currentState = !currentState;
-  }
-}
-
-function restoreTitle() {
-  clearInterval(timer);
-  document.title = origTitle; // restore original title
-}
-
-// Change page title on blur
-$(window).blur(function() {
-    animateTitle();
-});
-
-// Change page title back on focus
-$(window).focus(function() {
-    restoreTitle();
-});
-
-});
-
     
   </head>
   <body>
