--- a/about.html
+++ b/about.html
@@ -14,86 +14,43 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
    
   </head>
   <body>
-    <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WHCJD39"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
     <header>
       <div class="logo">The Chocolate Shop</div>
     </header>
     <nav>
       <ul>
-        <li><a href='/'>Home</a></li>
-        <li><a href='/products'>Our Chocolates</a></li>
-        <li><a href='/about'>About us</a></li>
-        <li><a href='/reviews'>Reviews</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="products.html">Our Chocolates</a></li>
+        <li><a href="about.html">About us</a></li>
+        <li><a href="reviews.html">Reviews</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
     <main>
+      <h1>About Us</h1>
+      <p>
+        At our chocolate shop, we are passionate about creating the highest quality chocolates using
+        only the finest ingredients. We source our cocoa beans from small, ethical farms and
+        carefully craft each chocolate by hand. Our chocolates are perfect for any occasion, whether
+        you're treating yourself or gifting someone special. Stop by our shop or browse our online
+        selection to discover the delicious world of chocolate with us.
+      </p>
+      <p>
+        Our chocolate shop was founded in 2010 by a group of chocolate enthusiasts who wanted to
+        share their love of chocolate with the world. Since then, we have become a beloved
+        destination for chocolate lovers everywhere, offering a wide selection of artisanal
+        chocolates in a variety of flavors and styles.
+      </p>
+      <p>
+        In addition to our delicious chocolates, we are also committed to sustainability and ethical
+        sourcing. We work with small cocoa farmers around the world to ensure that our cocoa is
+        sustainably grown and fairly traded. We are also dedicated to reducing our environmental
+        impact, and have implemented a number of eco-friendly practices in our production process.
+      </p>
       <img
-        src="https://cdn.pixabay.com/photo/2015/10/02/12/00/chocolate-968457_960_720.jpg"
-        alt="chocolate"
+        src="https://live.staticflickr.com/5538/10687070725_ce6ab44eb9_b.jpg/"
+        alt="Cocoa beans"
       />
-      <h2 id="featured">Featured Chocolates</h2>
-      <div class="featured-container">
-        <div class="chocolate-card">
-          <img
-            src="https://via.placeholder.com/150x150"
-            alt="Milk Chocolate"
-          />
-          <h3>Milk Chocolate</h3>
-          <p>$5.99</p>
-          <button class="add-to-cart-btn">Add to Cart</button>
-        </div>
-        <div class="chocolate-card">
-          <img
-            src="https://via.placeholder.com/150x150"
-            alt="Dark Chocolate"
-          />
-          <h3>Dark Chocolate</h3>
-          <p>$6.99</p>
-          <button class="add-to-cart-btn">Add to Cart</button>
-        </div>
-        <div class="chocolate-card">
-          <img
-            src="https://via.placeholder.com/150x150"
-            alt="White Chocolate"
-          />
-          <h3>White Chocolate</h3>
-          <p>$4.99</p>
-          <button class="add-to-cart-btn">Add to Cart</button>
-        </div>
-      </div>
-      <div class="featured-container">
-        <div class="chocolate-card">
-          <img
-            src="https://via.placeholder.com/150x150"
-            alt="Milk Chocolate"
-          />
-          <h3>Almond Chocolate</h3>
-          <p>$5.99</p>
-          <button class="add-to-cart-btn">Add to Cart</button>
-        </div>
-        <div class="chocolate-card">
-          <img
-            src="https://via.placeholder.com/150x150"
-            alt="Dark Chocolate"
-          />
-          <h3>Bailey's Chocolate</h3>
-          <p>$6.99</p>
-          <button class="add-to-cart-btn">Add to Cart</button>
-        </div>
-        <div class="chocolate-card">
-          <img
-            src="https://via.placeholder.com/150x150"
-            alt="White Chocolate"
-          />
-          <h3>Chili Chocolate</h3>
-          <p>$4.99</p>
-          <button class="add-to-cart-btn">Add to Cart</button>
-        </div>
-      </div>
 
       <h2 id="contact">Contact</h2>
       <div class="contact-container">
@@ -104,10 +61,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <input type="submit" />
         </form>
         <h3>Subscribe to our newsletter</h3>
-        <p>
-          Don't miss any company updates, product announcements and
-          discounts.
-        </p>
+        <p>Don't miss any company updates, product announcements and discounts.</p>
         <form id="newsletter-form">
           <input placeholder="email" />
           <input type="submit" />
@@ -115,9 +69,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </div>
     </main>
     <footer>
-      <a href="mailto:fake@chocolate-shop.com"
-        >fake@chocolate-shop.com</a
-      ><br />
+      <a href="mailto:fake@chocolate-shop.com">fake@chocolate-shop.com</a><br />
       <a href="tel:0049123456">+49 123456</a>
       <p>Copyright 2022 Chocolate Shop</p>
       <br />
