--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-WHCJD39');</script>
 <!-- End Google Tag Manager -->
-   <title>The Chocolate Shop</title>
+   <title>About</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
    
   </head>
