--- a/index.html
+++ b/index.html
@@ -123,6 +123,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <p>Copyright 2022 Chocolate Shop</p>
       <br />
     </footer>
-    <script src="cart.js"></script>
+    <script src="animated-title.js"></script>
   </body>
 </html>
