--- a/products.html
+++ b/products.html
@@ -9,6 +9,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <!-- End Google Tag Manager -->
     <title>Our Chocolates</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
+      <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ 
+    <script src="animated-title.js" defer></script>
    
   </head>
   <body>
