--- a/reviews.html
+++ b/reviews.html
@@ -16,7 +16,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     />
     <link rel="stylesheet" type="text/css" href="style.css" />
     <title>Customer reviews</title>
-   
+     <script src="animated-title.js" defer></script>
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
