--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <!-- End Google Tag Manager -->
    <title>About</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
-   
+     <script src="animated-title.js" defer></script>
   </head>
   <body>
     <header>
